--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel='icon' type='image/png' href='/image/1.png'>
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel='stylesheet' href='/build/bundle.css'>
+    <link rel="stylesheet" href="/css/bootstrap.custom.css">
+    <link rel="stylesheet" href="./bootstrap.rtl.min.css">
     <link rel='stylesheet' href='/global.css'>
 
 
@@ -21,13 +23,12 @@
     />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
+    <script defer src='/build/bundle.js'></script>
 
 </head>
 
 <body>
 
 </body>
-<script defer src='/build/bundle.js'></script>
 
 </html>
