--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,12 @@
 
 
     <link rel='icon' type='image/png' href='/image/1.png'>
-    <link rel="stylesheet" href="/css/fonts.css">
+
     <link rel='stylesheet' href='/build/bundle.css'>
+    <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/bootstrap.custom.css">
-    <link rel="stylesheet" href="./bootstrap.rtl.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.rtl.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.rtl.min.css.map">
     <link rel='stylesheet' href='/global.css'>
 
 
